<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".Activities.GroupChoiceActivity">

    <Button
        android:id="@+id/training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training"/>

    <Button
        android:id="@+id/group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/training"
        android:text="@string/group1"/>

    <Button
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group1"
        android:text="@string/group2"/>

    <Button
        android:id="@+id/group3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group2"
        android:text="@string/group3"/>

</RelativeLayout>