<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".Activities.GraphTypeActivity">

    <Button
        android:id="@+id/touchTrainingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch_training"/>

    <Button
        android:id="@+id/touchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/touchTrainingButton"
        android:text="@string/touch_graphs"/>

    <Button
        android:id="@+id/embossTrainingButton"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/touchButton"
        android:text="@string/emboss_training"/>

    <Button
        android:id="@+id/embossButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/embossTrainingButton"
        android:text="@string/emboss_graph"/>

</RelativeLayout>